# lightweight_vicon_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lightweight_vicon_bridge/share/lightweight_vicon_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: mocap_to_kinect_static_transforms.launch  mocap_to_table_static_transform.launch  mocap_to_tables_static_transform.launch  mocap_to_val_static_transform.launch  mocap_to_victor_static_transform.launch  vicon_bridge.launch  vicon_bridge_with_markers.launch
lightweight_vicon_bridge/: CMakeLists.txt  package.xml
lightweight_vicon_bridge/launch/: vicon_bridge.launch
lightweight_vicon_bridge/src/: lightweight_vicon_bridge_node.cpp
lightweight_vicon_bridge/vicon_sdk/x64/: ViconDataStreamSDK_CPPTest  libboost_date_time-mt.so.1.46.1  libboost_graph-mt.so.1.46.1  libboost_math_tr1f-mt.so.1.46.1  libboost_program_options-mt.so.1.46.1  libboost_random-mt.so.1.46.1  libboost_signals-mt.so.1.46.1  libboost_wserialization-mt.so.1.46.1
lightweight_vicon_bridge/vicon_sdk/x86/: libboost_graph-mt.so.1.46.1  libboost_math_c99-mt.so.1.46.1  libboost_program_options-mt.so.1.46.1  libboost_random-mt.so.1.46.1
lightweight_vicon_bridge_ros1/: CMakeLists.txt  package.xml
lightweight_vicon_bridge_ros1/launch/: mocap_to_realsense_static_transforms.launch  mocap_to_tables_static_transform.launch
lightweight_vicon_bridge_ros1/src/: raw_marker_bridge_node.cpp
lightweight_vicon_bridge_ros1/vicon_sdk/x64/: libboost_filesystem-mt.so.1.46.1  libboost_math_tr1l-mt.so.1.46.1  libboost_serialization-mt.so.1.46.1  libboost_system-mt.so.1.46.1  libboost_unit_test_framework-mt.so.1.46.1  libboost_wave-mt.so.1.46.1
lightweight_vicon_bridge_ros1/vicon_sdk/x86/: libboost_math_c99f-mt.so.1.46.1  libboost_python-mt.so.1.46.1  libboost_serialization-mt.so.1.46.1  libboost_signals-mt.so.1.46.1  libboost_wave-mt.so.1.46.1  libboost_wserialization-mt.so.1.46.1
log/: latest_build
mocap_interfaces/: CMakeLists.txt  package.xml
mocap_interfaces/install/: local_setup.sh  setup.sh
mocap_interfaces/install/mocap_interfaces/share/mocap_interfaces/: package.bash  package.zsh
mocap_interfaces/log/: latest_build
msg/: MocapMarker.msg
scripts/: visualize_raw_markers.py
src/: lightweight_vicon_bridge_node.cpp  raw_marker_bridge_node.cpp  tf_publisher_node.cpp
vicon_sdk/x64/: libboost_iostreams-mt.so.1.46.1  libboost_math_c99-mt.so.1.46.1  libboost_math_c99f-mt.so.1.46.1  libboost_math_c99l-mt.so.1.46.1  libboost_math_tr1-mt.so.1.46.1  libboost_prg_exec_monitor-mt.so.1.46.1  libboost_python-mt.so.1.46.1  libboost_regex-mt.so.1.46.1  libboost_thread-mt.so.1.46.1
vicon_sdk/x86/: ViconDataStreamSDK_CPPTest  libboost_date_time-mt.so.1.46.1  libboost_filesystem-mt.so.1.46.1  libboost_iostreams-mt.so.1.46.1  libboost_math_c99l-mt.so.1.46.1  libboost_math_tr1-mt.so.1.46.1  libboost_math_tr1f-mt.so.1.46.1  libboost_math_tr1l-mt.so.1.46.1  libboost_prg_exec_monitor-mt.so.1.46.1  libboost_regex-mt.so.1.46.1  libboost_system-mt.so.1.46.1  libboost_thread-mt.so.1.46.1  libboost_unit_test_framework-mt.so.1.46.1
